# Dual_Diffusion_II

./: PROGRESS.md
code/: .gitignore  README.md  pyproject.toml
code/configs/: music_cfc.yaml
code/dmd/: _version.py
code/dmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/dmd/blocks/: temporal.py
code/dmd/configs/: run00_ffn_s0.yaml  run05_ffn_timecond_s0.yaml  run10_gated_ffn_s0.yaml  run15_gru_s0.yaml  run20_cfc_s0.yaml  run25_node_s0.yaml
code/dmd/data/: asap_map.py  build_music.py  loader.py  midi_lite.py  music.py  validate.py
code/dmd/diffusion/: forward.py  objective.py  schedules.py
code/dmd/eval/: generated.py  human_acf.py  score_align.py  tempo_curve.py
code/dmd/exp/: grid.py
code/dmd/models/: denoiser.py
code/dmd/prep/: corpus_eval.npz  (+4 more)
code/notebooks/: 01_m2_data_audit.py  01_m2_data_audit_notebook.ipynb  02_m3_checks.py  03_m4_checks.py  04_train_smoke.py  05_experiment_grid.py  05_experiment_grid_0.ipynb  05_experiment_grid_10.py  05_experiment_grid_15.ipynb  05_experiment_grid_20.ipynb  05_experiment_grid_25.ipynb  05_experiment_grid_5.ipynb  06_speed_check.py  _to_ipynb.py
code/results/: asap_map.csv  human_acf_asap.json  human_acf_asap_smoke.csv  human_acf_asap_smoke.json  human_acf_fixed.csv  human_acf_fixed.json  human_acf_fixed_smoke.csv  human_acf_fixed_smoke.json  maestro_asap_audit.csv  maestro_fixed_audit.csv
code/tests/: test_denoiser.py  test_diffusion.py  test_grid_eval.py  test_midi_lite.py  test_representation.py  test_score_align.py  test_temporal_blocks.py  test_train_smoke.py
code/tools/: lint_shadow.py
(+16 files in other folders)
