[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dmd"
version = "0.1.0"
description = "Dual-Manifold Diffusion: joint generation of coupled discrete and continuous modalities"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = ["mlflow>=2.9", "tqdm"]
music = ["pretty_midi>=0.2.10", "mido>=1.3", "muspy>=0.5"]
eval = ["scipy>=1.11", "pandas>=2.0"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["dmd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
